--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@antv/x6-plugin-snapline": "^2.1.7",
     "@antv/x6-vue-shape": "^2.1.2",
     "@element-plus/icons-vue": "^2.3.1",
-    "@eric/antv-xmind": "^1.0.11",
+    "@eric/antv-xmind": "^1.0.12",
+    "@eric/antv-xmind-layout": "^1.0.0",
+    "@eric/antv-xmind-style": "^1.0.0",
+    "@eric/antv-xmind-vue-hooks": "^1.0.0",
     "@vueuse/core": "^11.1.0",
     "element-plus": "^2.8.5",
     "gcoord": "^1.0.6",
