修改worker代码为外部依赖

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pako": "^2.1.0",
     "projzh": "^1.0.0",
     "rbush": "^4.0.1",
+    "t-worker": "^1.0.2",
     "vue": "^3.3.8",
     "vue-router": "^4.4.5"
   },
